using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CombatPlayer : MonoBehaviour
{
    [Header("ê¸°ë³¸ ìŠ¤íƒ¯")]
    public string playerName;
    public int health;
    public int maxHealth;
    private int _currentShield;
    public int currentShield
    {
        get => _currentShield;
        set
        {
            _currentShield = value;
            C_HUDManager.Instance?.UpdatePlayerHealth(health, maxHealth, _currentShield);
        }
    }

    [Header("ëŠ¥ë ¥ì¹˜")]
    public CombatStats combat = new();
    public RelationStats relation = new();

    [Header("í–‰ë™ë ¥")]
    public int actionPoints;
    public int maxActionPoints;

    [Header("ìˆ™ë ¨ë„ ì‹œìŠ¤í…œ")]
    public Dictionary<CardData, CardProgress> cardProgressMap = new();

    [Header("ì»´í¬ë„ŒíŠ¸")]
    private Animator animator;
    public EffectHandler effectHandler;

    public CombatPlayer() { }

    private void Awake()
    {
        animator = GetComponent<Animator>();
        effectHandler = GetComponent<EffectHandler>();
    }

    private void Start()
    {
        health = maxHealth = 100;
    }

    public int GetCardLevel(CardData card)
    {
        if (card == null)
        {
            Debug.LogWarning("GetCardLevel() - cardDataê°€ nullì…ë‹ˆë‹¤.");
            return 1;
        }

        if (!cardProgressMap.ContainsKey(card))
        {
            cardProgressMap[card] = new CardProgress { cardData = card, usageCount = 0 };
        }

        return cardProgressMap[card].GetLevel();
    }

    public void RegisterCardUsage(CardData card)
    {
        if (card == null)
        {
            Debug.LogWarning("RegisterCardUsage() - cardDataê°€ nullì…ë‹ˆë‹¤.");
            return;
        }

        if (!cardProgressMap.ContainsKey(card))
        {
            cardProgressMap[card] = new CardProgress { cardData = card, usageCount = 0 };
        }

        cardProgressMap[card].usageCount++;
        Debug.Log($"[{card.cardName}] ì‚¬ìš©ë¨ â†’ ìˆ™ë ¨ë„ {cardProgressMap[card].usageCount}íšŒ");
    }

    public void ResetActionPoints()
    {
        actionPoints = maxActionPoints;
        Debug.Log($"{playerName} resets action points to {actionPoints}");
    }

    public void TakeDamage(int damage)
    {
        Debug.Log($"ğŸ§© [TakeDamage ì‹œì‘] ìˆœìˆ˜ Damage: {damage}");

        int modifiedDamage = damage;

        if (effectHandler != null)
        {
            var activeEffects = effectHandler.GetActiveEffects();
            Debug.Log($"[TakeDamage] í˜„ì¬ ê±¸ë¦° ìƒíƒœíš¨ê³¼ ìˆ˜: {activeEffects.Count}");

            foreach (var effect in activeEffects)
            {
                Debug.Log($"- ê±¸ë¦° íš¨ê³¼: {effect.BaseEffect.effectName} (íƒ€ì…: {effect.BaseEffect.effectType})");
            }

            foreach (var effect in activeEffects)
            {
                if (effect.BaseEffect.effectType == StatusEffectType.Debuff)
                {
                    float multiplier = effect.BaseEffect.receivedDamageMultiplier;
                    if (multiplier > 0f)
                    {
                        modifiedDamage = Mathf.RoundToInt(modifiedDamage * (1f + multiplier));
                        Debug.Log($"[TakeDamage] ë””ë²„í”„ {effect.BaseEffect.effectName} ì ìš©ë¨ â†’ ìµœì¢… í”¼í•´ {modifiedDamage}");
                        break;
                    }
                }
            }
        }

        int damageAfterShield = modifiedDamage;

        if (currentShield > 0)
        {
            int shieldUsed = Mathf.Min(currentShield, damageAfterShield);
            currentShield -= shieldUsed;
            damageAfterShield -= shieldUsed;

            Debug.Log($"[TakeDamage] ì‹¤ë“œ {shieldUsed} ì†Œëª¨ â†’ ë‚¨ì€ ì‹¤ë“œ {currentShield}");
        }

        if (damageAfterShield > 0)
        {
            health -= damageAfterShield;
            Debug.Log($"[TakeDamage] ìµœì¢… ì²´ë ¥ ê°ì†Œ: {damageAfterShield} â†’ HP: {health}/{maxHealth}");
        }

        C_HUDManager.Instance.UpdatePlayerHealth(health, maxHealth, currentShield);
        PlayAttackedAnimation(0.28f);

        if (health <= 0)
            Die();
    }

    public void Heal(int amount)
    {
        health = Mathf.Min(health + amount, maxHealth);
        C_HUDManager.Instance.UpdatePlayerHealth(health, maxHealth);
        Debug.Log($"{playerName} heals {amount}. Current HP: {health} / {maxHealth}");
    }

    public void AddShield(int amount)
    {
        currentShield += amount;
        Debug.Log($"{playerName} gains {amount} shield. Total Shield: {currentShield}");
    }

    public void ResetShield()
    {
        currentShield = 0;
        Debug.Log($"{playerName}'s shield is reset.");
    }

    private void Die()
    {
        animator?.SetTrigger("OnDeath");
        StartCoroutine(ShowDefeatAfterDelay(1.2f));
    }

    private IEnumerator ShowDefeatAfterDelay(float delay)
    {
        yield return new WaitForSeconds(delay);
        C_HUDManager.Instance?.ShowDefeatPanel();
        Time.timeScale = 0f;
    }

    public void ApplyEffect(StatusEffect effect, int sourceDamage = 0)
    {
        if (effectHandler != null)
        {
            effectHandler.AddEffect(effect, sourceDamage);
            Debug.Log($"[ApplyEffect] {playerName}ì— {effect.effectName} ì ìš©ë¨ (sourceDamage={sourceDamage})");
        }
        else
        {
            Debug.LogWarning($"[ApplyEffect] {playerName}ì— EffectHandlerê°€ ì—†ìŠµë‹ˆë‹¤.");
        }
    }

    public void PlayAttackAnimation()
    {
        animator?.SetTrigger("OnAttack");
    }

    public void PlayDefenseAnimation()
    {
        animator?.SetTrigger("OnDefense");
    }

    public void PlayAttackedAnimation(float delay = 0.28f)
    {
        StartCoroutine(DelayedAttackedCoroutine(delay));
    }

    private IEnumerator DelayedAttackedCoroutine(float delay)
    {
        yield return new WaitForSeconds(delay);
        animator?.SetTrigger("OnAttacked");
    }

    public void LoadFromAcademy(AcademyPlayer academyPlayer)
    {
        playerName = academyPlayer.playerName;

        combat.strength = academyPlayer.combat.strength;
        combat.agility = academyPlayer.combat.agility;
        combat.magic = academyPlayer.combat.magic;
        combat.insight = academyPlayer.combat.insight;
        combat.willPower = academyPlayer.combat.willPower;
        combat.wit = academyPlayer.combat.wit;

        relation.charisma = academyPlayer.relation.charisma;
        relation.luck = academyPlayer.relation.luck;
        relation.fame = academyPlayer.relation.fame;

        maxHealth = 100;
        health = maxHealth;
        maxActionPoints = 5;
        actionPoints = maxActionPoints;
        cardProgressMap = new Dictionary<CardData, CardProgress>();
    }
}
